2001-02-06 02:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
	
	* gnus-sum.el (gnus-summary-make-menu-bar): Don't share menu bar
	in Emacs.

	* gnus-art.el (gnus-article-make-menu-bar): Make
	gnus-article-post-menu.
	
	* gnus-xmas.el (gnus-xmas-article-menu-add): Add
	gnus-article-commands-menu.

2001-01-31 09:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-score.el (gnus-summary-score-entry): match may be an integer.

2001-01-26 08:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-summary-save-in-pipe): Prompt for saving
	command if there is not last-saver.
	* rfc2047.el (rfc2047-encode): MIME charset is not coding system.
	(rfc2047-charset-encoding-alist): Add big5.
	* mm-util.el (mm-mime-mule-charset-alist): Preferred MIME names
	GB2312 and Big5.

2001-01-24  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-print-article): Remove process mark.
	* gnus-sum.el (gnus-summary-print-article): Take one prefix
	argument. Allow to print several articles in one file.
	* webmail.el (webmail-type-definition): netaddress changes.

	* mm-util.el (mm-string-as-unibyte): New.
	* message.el (message-cite-original-without-signature): Don't peel
	off the blank line.
	* message.el (message-send-mail): Content-Type may not be there.
	By Alberto Lusiani.
	* gnus-art.el (article-display-x-face): Insert X-Face if there is
	not.
	* rfc2047.el (rfc2047-fold-region): Don't insert LWSP if there is
	one.
	* gnus-win.el (gnus-configure-windows): switch-to-buffer in XEmacs.
	(gnus-remove-some-windows): Ditto.
	* mm-decode.el (mm-interactively-view-part): Don't copy-sequence
	handle.
	* gnus-art.el (gnus-mime-view-part): Copy it.
	(gnus-mime-view-part-as-type): Add into gnus-article-mime-handles.
	* nnmail.el (nnmail-get-new-mail): Find group only if file is not
	orig-file. Use ',source.
	* nnslashdot.el (nnslashdot-request-list): Get the right year. By
	Lars Magne Ingebrigtsen.
	* pop3.el (pop3-get-message-count): Andrew Innes